# test_rust_lambda_container

./: Cargo.toml  Dockerfile  Dockerfile.build
src/: main.rs
