[package]
name = "hello-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hello-container"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
tokio = "1.17.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }